# leveldb

./: leveldb.mk
auto/: Makefile.am  configure.ac
auto/m4/: snappy.m4
